# sparse-lin-alg

./: LICENSE  README.md  SparseMatrix.hs  Tests.hs  sparse-lin-alg.cabal  sparse-matrix.cabal
Math/LinearAlgebra/: Sparse.hs
Math/LinearAlgebra/Sparse/: Algorithms.hs  IntMapUtilities.hs  Matrix.hs  Vector.hs
Math/LinearAlgebra/Sparse/Algorithms/: Diagonal.hs  SolveLinear.hs  Staircase.hs
Tests/: Algorithms.hs  Generators.hs  Matrix.hs  Vector.hs
