Name:                sparse-matrix
Version:             0.1
Synopsis:            Small library for effective representation of sparse matrices and computations with them
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Alexey Alekhin
Maintainer:          alexey.alekhin@me.com
-- Copyright:           
Category:            Math
Build-type:          Simple
Extra-source-files:  README.md
Cabal-version:       >=1.2


Library
  Exposed-modules:     SparseMatrix
  -- Ghc-options:         -Wall
  Build-depends:       base, containers

Test-Suite tests
  Type:                exitcode-stdio-1.0
  Main-is:             Tests.hs
  Ghc-options:         -threaded
  Build-depends:       base, containers, QuickCheck >= 2, test-framework, test-framework-quickcheck2
